<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/card_flag"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Name"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/card_name"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/card_capital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="capital"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/card_capital"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/card_region"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="region"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/card_region"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/card_subregion"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="subregion"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/card_subregion"/>

        </LinearLayout>



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/card_population"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="population"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/card_population"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/card_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="border"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/card_borders"/>

        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/card_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="language"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/card_languages"/>

        </ScrollView>


    </LinearLayout>




</com.google.android.material.card.MaterialCardView>

